# typst-math-paper

./: .gitignore  index.html
interactive/interactive/: Cargo.toml  Makefile  Makefile_new
interactive/interactive/src/: constraints.rs  main.rs  objects.rs
site/: My Library 2.bib  equations.typ  index.html  site-builder.js  style.css  template.typ
